# simwave

./: .gitattributes  .gitignore  FUTURE.md  LICENSE  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: flake8.yml  pytest-cpu.yml  python-publish.yml
benchmark/: marmousi_2D.py  overthrust_3D.py
examples/: 3D_lean.py  acoustic_2D.py  acoustic_2D_density.py  acoustic_3D.py  acoustic_3D_density.py  gradient_2D.py  gradient_3D.py  marmousi_2D.py  movie.py  overthrust_3D.py
examples/c_code/: forward_openmp.c  forward_sequential.c
examples/plots/: teste.py
examples/utils/: parser.py
miniwave/: .gitignore  README.md  miniwave.py  selected_kernel.h
miniwave/c-frontend/: CMakeLists.txt  miniwave.c  selected_kernel.h.in
miniwave/kernels/: sequential.c  sequential.h
miniwave/utils/: __init__.py  compiler.py  dataset_writer.py  kernel.py  model.py  plot.py  properties.py
mms/: README.md  acoustic_2D_density_mms.py  acoustic_2D_mms.py  comparison.sh  harmonic_solution.py  loop_acoustic_2D_density_mms.py  mms_with_tanh.py  plot_individual_files_mms.py  plot_loop_mms.py  save_individual_files_acoustic_2D_density_mms.py
pywave/: __init__.py
pywave/data/: __init__.py  io.py  (+5 more)
simwave/: __init__.py  _version.py
simwave.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_compiler.py  test_convergence.py  test_gpu_convergence.py  test_gpu_solution.py  test_parallel_solution.py  test_solution.py  test_source.py  test_space_model.py  test_time_model.py  test_u_saving.py
tutorial/: forward-2D.ipynb
(+98 files in other folders)
